sysvis/generated/SysvisParser.py
# Generated from Sysvis.g4 by ANTLR 4.7.1
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *
from typing.io import TextIO




class SysvisParser(Parser):
    grammarFileName = "Sysvis.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "'---'", "';'", "'['", "','", "']'", "'='",
                    "'->'", "'{'", "'}'", "'node'", "'edge'", "'group'",
                    "'zone'", "'delete'"]

    symbolicNames = ["<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "NODE", "EDGE", "GROUP",
                     "ZONE", "DELETE", "ID", "SPACES"]

    RULE_story = 0
    RULE_moment = 1
    RULE_stmt_list = 2
    RULE_stmt = 3
    RULE_attr_stmt = 4
    RULE_attr_list = 5
    RULE_assignment = 6
    RULE_edge_stmt = 7
    RULE_node_stmt = 8
    RULE_group = 9
    RULE_zone = 10
    RULE_delete = 11

    ruleNames = ["story", "moment", "stmt_list", "stmt", "attr_stmt",
                 "attr_list", "assignment", "edge_stmt", "node_stmt",
                 "group", "zone", "delete"]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    NODE = 10
    EDGE = 11
    GROUP = 12
    ZONE = 13
    DELETE = 14
    ID = 15
    SPACES = 16

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class StoryContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def moment(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SysvisParser.MomentContext)
            else:
                return self.getTypedRuleContext(SysvisParser.MomentContext, i)

        def EOF(self):
            return self.getToken(SysvisParser.EOF, 0)

        def getRuleIndex(self):
            return SysvisParser.RULE_story

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStory"):
                return visitor.visitStory(self)
            else:
                return visitor.visitChildren(self)

    def story(self):

        localctx = SysvisParser.StoryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_story)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.moment()
            self.state = 29
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 0, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 25
                    self.match(SysvisParser.T__0)
                    self.state = 26
                    self.moment()
                self.state = 31
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 0, self._ctx)

            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == SysvisParser.T__0:
                self.state = 32
                self.match(SysvisParser.T__0)

            self.state = 35
            self.match(SysvisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MomentContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt_list(self):
            return self.getTypedRuleContext(SysvisParser.Stmt_listContext, 0)

        def getRuleIndex(self):
            return SysvisParser.RULE_moment

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitMoment"):
                return visitor.visitMoment(self)
            else:
                return visitor.visitChildren(self)

    def moment(self):

        localctx = SysvisParser.MomentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_moment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.stmt_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Stmt_listContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SysvisParser.StmtContext)
            else:
                return self.getTypedRuleContext(SysvisParser.StmtContext, i)

        def getRuleIndex(self):
            return SysvisParser.RULE_stmt_list

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStmt_list"):
                return visitor.visitStmt_list(self)
            else:
                return visitor.visitChildren(self)

    def stmt_list(self):

        localctx = SysvisParser.Stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt_list)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.stmt()
            self.state = 44
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 2, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 40
                    self.match(SysvisParser.T__1)
                    self.state = 41
                    self.stmt()
                self.state = 46
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 2, self._ctx)

            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == SysvisParser.T__1:
                self.state = 47
                self.match(SysvisParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def node_stmt(self):
            return self.getTypedRuleContext(SysvisParser.Node_stmtContext, 0)

        def edge_stmt(self):
            return self.getTypedRuleContext(SysvisParser.Edge_stmtContext, 0)

        def attr_stmt(self):
            return self.getTypedRuleContext(SysvisParser.Attr_stmtContext, 0)

        def assignment(self):
            return self.getTypedRuleContext(SysvisParser.AssignmentContext, 0)

        def group(self):
            return self.getTypedRuleContext(SysvisParser.GroupContext, 0)

        def zone(self):
            return self.getTypedRuleContext(SysvisParser.ZoneContext, 0)

        def delete(self):
            return self.getTypedRuleContext(SysvisParser.DeleteContext, 0)

        def getRuleIndex(self):
            return SysvisParser.RULE_stmt

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStmt"):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)

    def stmt(self):

        localctx = SysvisParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stmt)
        try:
            self.state = 57
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 4, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.node_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.edge_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                self.attr_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 53
                self.assignment()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 54
                self.group()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 55
                self.zone()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 56
                self.delete()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Attr_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attr_list(self):
            return self.getTypedRuleContext(SysvisParser.Attr_listContext, 0)

        def GROUP(self):
            return self.getToken(SysvisParser.GROUP, 0)

        def NODE(self):
            return self.getToken(SysvisParser.NODE, 0)

        def EDGE(self):
            return self.getToken(SysvisParser.EDGE, 0)

        def ZONE(self):
            return self.getToken(SysvisParser.ZONE, 0)

        def getRuleIndex(self):
            return SysvisParser.RULE_attr_stmt

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAttr_stmt"):
                return visitor.visitAttr_stmt(self)
            else:
                return visitor.visitChildren(self)

    def attr_stmt(self):

        localctx = SysvisParser.Attr_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attr_stmt)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            _la = self._input.LA(1)
            if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & (
                    (1 << SysvisParser.NODE) | (1 << SysvisParser.EDGE) | (1 << SysvisParser.GROUP) | (
                    1 << SysvisParser.ZONE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 60
            self.attr_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Attr_listContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SysvisParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(SysvisParser.AssignmentContext, i)

        def getRuleIndex(self):
            return SysvisParser.RULE_attr_list

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAttr_list"):
                return visitor.visitAttr_list(self)
            else:
                return visitor.visitChildren(self)

    def attr_list(self):

        localctx = SysvisParser.Attr_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attr_list)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(SysvisParser.T__2)
            self.state = 63
            self.assignment()
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and (
                    (1 << _la) & ((1 << SysvisParser.T__1) | (1 << SysvisParser.T__3) | (1 << SysvisParser.ID))) != 0):
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == SysvisParser.T__1 or _la == SysvisParser.T__3:
                    self.state = 64
                    _la = self._input.LA(1)
                    if not (_la == SysvisParser.T__1 or _la == SysvisParser.T__3):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()

                self.state = 67
                self.assignment()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 73
            self.match(SysvisParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i: int = None):
            if i is None:
                return self.getTokens(SysvisParser.ID)
            else:
                return self.getToken(SysvisParser.ID, i)

        def getRuleIndex(self):
            return SysvisParser.RULE_assignment

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAssignment"):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)

    def assignment(self):

        localctx = SysvisParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(SysvisParser.ID)
            self.state = 76
            self.match(SysvisParser.T__5)
            self.state = 77
            self.match(SysvisParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Edge_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i: int = None):
            if i is None:
                return self.getTokens(SysvisParser.ID)
            else:
                return self.getToken(SysvisParser.ID, i)

        def attr_list(self):
            return self.getTypedRuleContext(SysvisParser.Attr_listContext, 0)

        def getRuleIndex(self):
            return SysvisParser.RULE_edge_stmt

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitEdge_stmt"):
                return visitor.visitEdge_stmt(self)
            else:
                return visitor.visitChildren(self)

    def edge_stmt(self):

        localctx = SysvisParser.Edge_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_edge_stmt)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(SysvisParser.ID)
            self.state = 80
            self.match(SysvisParser.T__6)
            self.state = 81
            self.match(SysvisParser.ID)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == SysvisParser.T__2:
                self.state = 82
                self.attr_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Node_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SysvisParser.ID, 0)

        def attr_list(self):
            return self.getTypedRuleContext(SysvisParser.Attr_listContext, 0)

        def getRuleIndex(self):
            return SysvisParser.RULE_node_stmt

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitNode_stmt"):
                return visitor.visitNode_stmt(self)
            else:
                return visitor.visitChildren(self)

    def node_stmt(self):

        localctx = SysvisParser.Node_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_node_stmt)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(SysvisParser.ID)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == SysvisParser.T__2:
                self.state = 86
                self.attr_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GroupContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GROUP(self):
            return self.getToken(SysvisParser.GROUP, 0)

        def ID(self):
            return self.getToken(SysvisParser.ID, 0)

        def stmt_list(self):
            return self.getTypedRuleContext(SysvisParser.Stmt_listContext, 0)

        def getRuleIndex(self):
            return SysvisParser.RULE_group

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitGroup"):
                return visitor.visitGroup(self)
            else:
                return visitor.visitChildren(self)

    def group(self):

        localctx = SysvisParser.GroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_group)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(SysvisParser.GROUP)
            self.state = 90
            self.match(SysvisParser.ID)
            self.state = 91
            self.match(SysvisParser.T__7)
            self.state = 92
            self.stmt_list()
            self.state = 93
            self.match(SysvisParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ZoneContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ZONE(self):
            return self.getToken(SysvisParser.ZONE, 0)

        def ID(self):
            return self.getToken(SysvisParser.ID, 0)

        def stmt_list(self):
            return self.getTypedRuleContext(SysvisParser.Stmt_listContext, 0)

        def getRuleIndex(self):
            return SysvisParser.RULE_zone

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitZone"):
                return visitor.visitZone(self)
            else:
                return visitor.visitChildren(self)

    def zone(self):

        localctx = SysvisParser.ZoneContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_zone)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(SysvisParser.ZONE)
            self.state = 96
            self.match(SysvisParser.ID)
            self.state = 97
            self.match(SysvisParser.T__7)
            self.state = 98
            self.stmt_list()
            self.state = 99
            self.match(SysvisParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeleteContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DELETE(self):
            return self.getToken(SysvisParser.DELETE, 0)

        def ID(self, i: int = None):
            if i is None:
                return self.getTokens(SysvisParser.ID)
            else:
                return self.getToken(SysvisParser.ID, i)

        def getRuleIndex(self):
            return SysvisParser.RULE_delete

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDelete"):
                return visitor.visitDelete(self)
            else:
                return visitor.visitChildren(self)

    def delete(self):

        localctx = SysvisParser.DeleteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_delete)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(SysvisParser.DELETE)
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 9, self._ctx)
            if la_ == 1:
                self.state = 102
                self.match(SysvisParser.ID)
                pass

            elif la_ == 2:
                self.state = 103
                self.match(SysvisParser.ID)
                self.state = 104
                self.match(SysvisParser.T__6)
                self.state = 105
                self.match(SysvisParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
